# CPPCompileTemplate

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  Makefile  README.md  helloworld.cpp  helloworld.h  main.cpp
